﻿drkns 15.05.2016 22:00:35 +0200 - build 4674

1. Уточнение 4668.

zg 15.05.2016 17:37:36 +0200 - build 4673

1. убрана блокировка перерисовки окон.

zg 15.05.2016 00:33:49 +0200 - build 4672

1. с форума: символ из "бюжэхъё" не включается в быстрый поиск.

drkns 13.05.2016 00:33:18 +0200 - build 4671

1. Уточнение обработки исключений для gcc.

2. Дополнительная информация в исключениях, брошенных вручную (function, file, line).

3. Рефакторинг.

drkns 11.05.2016 23:59:21 +0200 - build 4670

1. Уточнение обработки DM_GETDIALOGINFО.

2. Warnings.

3. Убраны неиспользуемые #include.

drkns 10.05.2016 22:45:32 +0200 - build 4669

1. Немного переделан способ вывода прогресса копирования.
   По идее, должны исправиться все существующие баги с прорисовкой.
   В реальности, как обычно, возможно всё.

2. Не хватало стандартных шапок в некоторых *.hpp.

drkns 10.05.2016 18:04:22 +0200 - build 4668

1. С форума: после нажатия Enter на офисных документах в панелях Far терпеливо ждёт когда документ будет закрыт.

drkns 09.05.2016 15:17:11 +0200 - build 4667

1. clang warnings.

2. Пара мелочей.

zg 09.05.2016 14:00:08 +0200 - build 4666

1. уточнение 4638.1: Dlg.* в раскрытом комбобоксе.

zg 08.05.2016 13:27:59 +0200 - build 4665

1. уточнение 4638.1: макрообласть для комбобокса - "Dialog".

2. опубликован тип окна WTYPE_COMBOBOX. ACTL_GETWINDOWINFO в Id возвращает хэндл родительского диалога.

drkns 08.05.2016 01:12:06 +0200 - build 4664

1. Уточнение 4663.2.

2. Повысим уровень предупреждений для thirdparty-библиотек.

drkns 07.05.2016 17:45:49 +0200 - build 4663

1. Уточнение расчета общего индикатора удаления.

2. Рефакторинг.

drkns 04.05.2016 23:22:57 +0200 - build 4662

1. После 4435 не работало разворачивание переменных в диалоге создания папки.

2. Рефакторинг.

drkns 04.05.2016 10:20:21 +0200 - build 4661

1. Уточнение 4656.2.

2. Пара мелочей.

drkns 03.05.2016 16:58:07 +0200 - build 4660

1. Уточнение 4656.2.

drkns 03.05.2016 13:51:34 +0200 - build 4659
