@@ -1,4 +1,8 @@
-﻿drkns 15.05.2016 22:00:35 +0200 - build 4674
+﻿drkns 16.05.2016 22:55:36 +0200 - build 4675
+
+1. Ещё одно уточнение работы запускателя.
+
+drkns 15.05.2016 22:00:35 +0200 - build 4674
 
 1. Уточнение 4668.
 
